// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Form/Button alignment 1`] = `
<div
  class="css-lol2ju"
>
  <div
    class="css-k008qs"
  >
    <button
      class="css-nug58z"
    >
      click this button
    </button>
  </div>
  <div
    class="css-k008qs"
  >
    <button
      class="css-1k476tp"
    >
      click this button
    </button>
  </div>
  <div
    class="css-k008qs"
  >
    <button
      class="css-cr3ubn"
    >
      click this button
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Button sizes 1`] = `
<div
  class="css-lol2ju"
>
  <div
    class="css-k008qs"
  >
    <button
      class="css-4xnzo1"
    >
      click this button
    </button>
  </div>
  <div
    class="css-k008qs"
  >
    <button
      class="css-11kcupu"
    >
      click this button
    </button>
  </div>
  <div
    class="css-k008qs"
  >
    <button
      class="css-cr3ubn"
    >
      click this button
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Button validations 1`] = `
<div
  class="css-lol2ju"
>
  <div
    class="css-k008qs"
  >
    <button
      class="css-h7vngw"
    >
      click this button
    </button>
  </div>
  <div
    class="css-k008qs"
  >
    <button
      class="css-pr2gxm"
    >
      click this button
    </button>
  </div>
  <div
    class="css-k008qs"
  >
    <button
      class="css-1xy9y2o"
    >
      click this button
    </button>
  </div>
  <div
    class="css-k008qs"
  >
    <button
      class="css-cr3ubn"
    >
      click this button
    </button>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Field field 1`] = `
<label
  class="css-ft59n8"
>
  <span
    class="css-iyjqx3"
  >
    <span>
      label
    </span>
  </span>
  <select
    class="css-1x64pgq"
    size="1"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
</label>
`;

exports[`Storyshots Components|Form/Input alignment 1`] = `
<div
  class="css-lol2ju"
>
  <div
    class="css-k008qs"
  >
    <input
      class="css-f41t2d"
      value="text"
    />
  </div>
  <div
    class="css-k008qs"
  >
    <input
      class="css-1ad2rr8"
      value="text"
    />
  </div>
  <div
    class="css-k008qs"
  >
    <input
      class="css-1o6bujc"
      value="text"
    />
  </div>
</div>
`;

exports[`Storyshots Components|Form/Input sizes 1`] = `
<div
  class="css-lol2ju"
>
  <div
    class="css-k008qs"
  >
    <input
      class="css-qz02ff"
      value="text"
    />
  </div>
  <div
    class="css-k008qs"
  >
    <input
      class="css-vl6kgo"
      value="text"
    />
  </div>
  <div
    class="css-k008qs"
  >
    <input
      class="css-1o6bujc"
      value="text"
    />
  </div>
</div>
`;

exports[`Storyshots Components|Form/Input validations 1`] = `
<div
  class="css-lol2ju"
>
  <div
    class="css-k008qs"
  >
    <input
      class="css-13v1obz"
      value="text"
    />
  </div>
  <div
    class="css-k008qs"
  >
    <input
      class="css-4c07ht"
      value="text"
    />
  </div>
  <div
    class="css-k008qs"
  >
    <input
      class="css-d6fo4a"
      value="text"
    />
  </div>
  <div
    class="css-k008qs"
  >
    <input
      class="css-1o6bujc"
      value="text"
    />
  </div>
</div>
`;

exports[`Storyshots Components|Form/Select alignment 1`] = `
<div
  class="css-lol2ju"
>
  <select
    class="css-lktxtf"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="css-llmj5t"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="css-6k67ao"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
</div>
`;

exports[`Storyshots Components|Form/Select sizes 1`] = `
<div
  class="css-lol2ju"
>
  <div
    class="css-k008qs"
  >
    <select
      class="css-1x64pgq"
    >
      <option
        value="val1"
      >
        Value 1
      </option>
      <option
        selected=""
        value="val2"
      >
        Value 2
      </option>
      <option
        value="val3"
      >
        Value 3
      </option>
    </select>
  </div>
  <div
    class="css-k008qs"
  >
    <select
      class="css-11c6rd0"
    >
      <option
        value="val1"
      >
        Value 1
      </option>
      <option
        selected=""
        value="val2"
      >
        Value 2
      </option>
      <option
        value="val3"
      >
        Value 3
      </option>
    </select>
  </div>
  <div
    class="css-k008qs"
  >
    <select
      class="css-6k67ao"
    >
      <option
        value="val1"
      >
        Value 1
      </option>
      <option
        selected=""
        value="val2"
      >
        Value 2
      </option>
      <option
        value="val3"
      >
        Value 3
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Select validations 1`] = `
<div
  class="css-lol2ju"
>
  <select
    class="css-qa4pip"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="css-130ns75"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="css-59o0fe"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
  <select
    class="css-6k67ao"
  >
    <option
      value="val1"
    >
      Value 1
    </option>
    <option
      selected=""
      value="val2"
    >
      Value 2
    </option>
    <option
      value="val3"
    >
      Value 3
    </option>
  </select>
</div>
`;

exports[`Storyshots Components|Form/Textarea alignment 1`] = `
<div
  class="css-lol2ju"
>
  <div
    class="css-k008qs"
  >
    <textarea
      align="end"
      class="css-mxs2kj"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="css-k008qs"
  >
    <textarea
      align="center"
      class="css-b7c25f"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="css-k008qs"
  >
    <textarea
      align="start"
      class="css-1ky3gy2"
      style="height:0"
    >
      text
    </textarea>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Textarea sizes 1`] = `
<div
  class="css-lol2ju"
>
  <div
    class="css-k008qs"
  >
    <textarea
      class="css-1nt74oa"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="css-k008qs"
  >
    <textarea
      class="css-1cfv75g"
      style="height:0"
    >
      text
    </textarea>
  </div>
  <div
    class="css-k008qs"
  >
    <textarea
      class="css-1ky3gy2"
      style="height:0"
    >
      text
    </textarea>
  </div>
</div>
`;

exports[`Storyshots Components|Form/Textarea validations 1`] = `
<div
  class="css-lol2ju"
>
  <div
    class="css-k008qs"
  >
    <textarea
      class="css-1j8dr9r"
      style="height:0"
      valid="error"
    >
      text
    </textarea>
  </div>
  <div
    class="css-k008qs"
  >
    <textarea
      class="css-xb06fr"
      style="height:0"
      valid="warn"
    >
      text
    </textarea>
  </div>
  <div
    class="css-k008qs"
  >
    <textarea
      class="css-f34nqu"
      style="height:0"
      valid="valid"
    >
      text
    </textarea>
  </div>
  <div
    class="css-k008qs"
  >
    <textarea
      class="css-1ky3gy2"
      style="height:0"
    >
      text
    </textarea>
  </div>
</div>
`;
